:bug: fix ui overflow bugs

--- a/src/pages/playlists/Playlist.module.scss
+++ b/src/pages/playlists/Playlist.module.scss
@@ -1,6 +1,9 @@
 .outer {
   width: 100%;
   min-width: 0;
+  min-height: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
@@ -44,11 +47,15 @@
 }
 
 .content {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  min-height: 0;
   position: relative;
-  padding: 16px 0;
   border-top-right-radius: 24px;
   z-index: 10;
   margin-top: -32px;
+  padding-top: 16px;
 
   .playlistControls {
     z-index: 100;
