--- a/src/pages/playlists/Playlists.module.scss
+++ b/src/pages/playlists/Playlists.module.scss
@@ -2,6 +2,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
+  min-height: 0;
 
   .header {
     display: flex;
@@ -13,6 +14,12 @@
     .title {
       margin: 0;
     }
+  }
+
+  .content {
+    flex: 1;
+    overflow-y: auto;
+    overflow-x: hidden;
   }
 
   .list {
